[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "groq>=0.20.0",
    "gtts>=2.5.4",
    "gunicorn>=23.0.0",
    "langid>=1.1.6",
    "openai>=1.66.3",
    "psycopg2-binary>=2.9.10",
    "pytelegrambotapi>=4.26.0",
    "requests>=2.32.3",
]
